dataengines/powermanagement: set result for inhibition request

This is needed for the battery and display configuration applets to update state (reenable switch and show OSD or error notification).

BUG: 477355